@@ -5,6 +5,9 @@ If get a socket error from trying to create a socket whose name is too
 long, just skip file instead of exiting with error (original bug
 report by Ivo De Decker).
 
+Fixed seg fault bug reported by a couple sparc+openbsd users.  Thanks
+to Dave Steinberg for giving me an account on his system for testing.
+
 
 
 New in v0.10.1 (2002/09/16)
